--- a/Code/projecting_imputed_lognorm.Rmd
+++ b/Code/projecting_imputed_lognorm.Rmd
@@ -13,8 +13,8 @@ library(projectR)
 library(magick)
 library(plotrix)
 library(viridisLite)
-source("/Users/25149/Documents/JHU/Rotation/Dr.Goff/new_dev_v3/conserved pattern/EvaluateProjection.R")
-source("/Users/25149/Documents/JHU/Rotation/Dr.Goff/new_dev_v3/conserved pattern/myColorRamp.R")
+source("./code/EvaluateProjection.R")
+source("./code/myColorRamp.R")
 ```
 
 
